[package]
name = "day9"
version = "0.1.0"
edition = "2021"

[dependencies]
swift-rs = "1.0.6"

[dev-dependencies]
criterion = "0.5.1"
divan = "0"

[build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"] }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
