[workspace]
members = [ "day9_rust"]

[package]
name = "day9"
version = "0.1.0"
edition = "2021"

[dependencies]
day9_rust = { path = "day9_rust"}

[dev-dependencies]
criterion = "0.5.1"
divan = "0"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = {version = "1.0.6"}

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"]}

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
